Closed
Bug 187772
Opened 23 years ago
Closed 20 years ago
mouse wheel scrolling does not dismiss form auto complete history, results in floating autocomplete dropdown
Categories
(Toolkit :: Autocomplete, defect, P1)
Toolkit
Autocomplete
Tracking
()
RESOLVED
FIXED
mozilla1.8.1
People
(Reporter: jruderman, Assigned: masayuki)
References
Details
(Keywords: fixed1.8.1)
Attachments
(2 files, 5 obsolete files)
|
13.36 KB,
patch
|
masayuki
:
first-review+
|
Details | Diff | Splinter Review |
|
13.30 KB,
patch
|
masayuki
:
first-review+
masayuki
:
approval-branch-1.8.1+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Go to http://www.google.com/.
2. Make the window small enough that a vertical scrollbar appears.
3. Type a letter into the Google form (makes an autocomplete dropdown appear).
4. Scroll the page using the mouse wheel.
Result: the page scrolls, but the autocomplete dropdown stays put.
Expected: the autocomplete dropdown should disappear like it does in IE.
Tested using Phoenix 01/03. I'm using the Orbit Blue theme, but I don't think
it matters.
Comment 1•22 years ago
|
||
Verified on 0.6.1rc1.
(Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5a) Gecko/20030725 Mozilla
Firebird/0.6)
Suggest adding "floating" to summary, I searched for over 30 mins to track down
this bug, e.g. mouse wheel scrolling creates floating autocomplete.
Also note that activating the autocomplete using [page down] or [down arrow]
when field is focussed but the page is scrolled so that it is off screen, the
autocomplete appears in a weird place.
to reproduce:
1. click into a text field (e.g. Google)
2. scroll down so that text field dissapears off the top of the viewable area
(may need to resize window, especially if you're using google)
3. hit [page down] key or [down arrow]
results:
autocomplete appears outside of website area (on top of navigation toolbar).
Is this bug related to bug 216434 ?
Comment 4•22 years ago
|
||
I am also this behavior on build Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US;
rv:1.6a) Gecko/20031027 Firebird/0.7+. It is reproducable on many sites.
Updated•22 years ago
|
Flags: blocking1.0?
I guess it happens on any site (e.g. www.mozillazine.org). And also error is
present in latest realese 0.9
Comment 7•21 years ago
|
||
Still present in RC1!!!
Comment 8•21 years ago
|
||
(In reply to comment #7)
> Still present in RC1!!!
There is no need for comments like that, just check the status of the bug and
you will see that is not fixed.
Comment 9•21 years ago
|
||
*** Bug 269611 has been marked as a duplicate of this bug. ***
Comment 10•21 years ago
|
||
*** Bug 271512 has been marked as a duplicate of this bug. ***
Comment 11•21 years ago
|
||
present in
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.5) Gecko/20041107
Firefox/1.0 and reproducible on any site with a text-field.
Comment 12•21 years ago
|
||
*** Bug 277844 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Summary: mouse wheel scrolling does not dismiss form autocomplete → mouse wheel scrolling does not dismiss form auto complete history, results in floating autocomplete dropdown
Comment 13•21 years ago
|
||
*** Bug 287253 has been marked as a duplicate of this bug. ***
Comment 14•20 years ago
|
||
*** Bug 300714 has been marked as a duplicate of this bug. ***
Comment 15•20 years ago
|
||
*** Bug 267960 has been marked as a duplicate of this bug. ***
Updated•20 years ago
|
Flags: blocking-aviary1.5?
Updated•20 years ago
|
Flags: blocking-aviary1.5? → blocking-aviary1.5-
Comment 16•20 years ago
|
||
Still present with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4)
Gecko/20050908 Firefox/1.4.
Similar to bug #299657.
Comment 17•20 years ago
|
||
*** Bug 268882 has been marked as a duplicate of this bug. ***
Comment 18•20 years ago
|
||
*** Bug 310150 has been marked as a duplicate of this bug. ***
Comment 19•20 years ago
|
||
*** Bug 316097 has been marked as a duplicate of this bug. ***
Updated•20 years ago
|
Comment 20•20 years ago
|
||
*** Bug 317653 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 21•20 years ago
|
||
I'm trying to fix this.
Assignee: nobody → masayuki
Component: Location Bar and Autocomplete → Autocomplete
Flags: blocking-aviary1.0-
OS: Windows XP → All
Product: Firefox → Toolkit
Hardware: PC → All
Target Milestone: --- → mozilla1.9alpha1
Version: unspecified → Trunk
| Assignee | ||
Comment 22•20 years ago
|
||
We should override the rollup checking mthods on nsFormFillController instead of nsMenuDismissalListener.
Attachment #204162 -
Flags: first-review?(bryner)
| Assignee | ||
Updated•20 years ago
|
Status: NEW → ASSIGNED
Keywords: helpwanted
| Assignee | ||
Comment 23•20 years ago
|
||
Comment on attachment 204162 [details] [diff] [review]
Patch rv1.0
Mike:
Could you review for this?
Brian said, he cannot review now.
Attachment #204162 -
Flags: first-review?(bryner) → first-review?(mconnor)
Comment 24•20 years ago
|
||
I accidently ran across this, but I noticed when clicking the down arrow on the location bar I get this error:
* Call to xpconnect wrapped JSObject produced this error: *
[Exception... "'[JavaScript Error: "this.mInput.onPopupOpened is not a function" {file: "chrome://global/content/bindings/autocomplete.xml" line: 526}]' when calling method: [nsIAutoCompleteInput::popupOpen]" nsresult: "0x80570021 (NS_ERROR_XPC_JAVASCRIPT_ERROR_WITH_DETAILS)" location: "<unknown>" data: yes]
| Assignee | ||
Comment 25•20 years ago
|
||
Comment on attachment 204162 [details] [diff] [review]
Patch rv1.0
Thank you for your testing!
I'll create new patch.
Attachment #204162 -
Flags: first-review?(mconnor) → first-review-
| Assignee | ||
Updated•20 years ago
|
Severity: minor → normal
Priority: -- → P1
| Assignee | ||
Comment 26•20 years ago
|
||
This patch is very simple. This logic is better than previous patch.
Attachment #204162 -
Attachment is obsolete: true
Attachment #207011 -
Flags: first-review?(mconnor)
| Assignee | ||
Comment 27•20 years ago
|
||
Oops... Sorry for the SPAM.
Attachment #207011 -
Attachment is obsolete: true
Attachment #207012 -
Flags: first-review?(mconnor)
Attachment #207011 -
Flags: first-review?(mconnor)
| Assignee | ||
Comment 28•20 years ago
|
||
Attachment #207012 -
Attachment is obsolete: true
Attachment #207013 -
Flags: first-review?(mconnor)
Attachment #207012 -
Flags: first-review?(mconnor)
| Assignee | ||
Comment 29•20 years ago
|
||
*** Bug 262117 has been marked as a duplicate of this bug. ***
Comment 30•20 years ago
|
||
*** Bug 322079 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•20 years ago
|
Whiteboard: [needs review mconnor]
Updated•20 years ago
|
Flags: blocking-firefox2?
Updated•20 years ago
|
Flags: blocking-firefox2? → blocking-firefox2+
Comment 31•20 years ago
|
||
Comment on attachment 207013 [details] [diff] [review]
Patch rv2.2
ok, this should work for trunk, but the API changes aren't ok for branch. You can add a branch only interface that inherits from nsIAutoCompleteController (nsIAutoCompleteController_MOZILLA_1_8_BRANCH) to get the new functions on branch.
Attachment #207013 -
Flags: first-review?(mconnor) → first-review+
| Assignee | ||
Comment 32•20 years ago
|
||
checked-in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•20 years ago
|
Whiteboard: [needs review mconnor]
| Assignee | ||
Comment 33•20 years ago
|
||
Attachment #207013 -
Attachment is obsolete: true
Attachment #215477 -
Flags: first-review+
| Assignee | ||
Comment 34•20 years ago
|
||
Attachment #215496 -
Flags: approval-branch-1.8.1?(mconnor)
Comment 35•20 years ago
|
||
Although checked by nightly build and tinderbox-builds, with the Mac version, it still reproduces.
Mac OS X 10.3.9
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20060318
Firefox/1.6a1
| Assignee | ||
Comment 36•20 years ago
|
||
I filed bug 330999 for Mac.
| Assignee | ||
Comment 37•20 years ago
|
||
*** Bug 252225 has been marked as a duplicate of this bug. ***
Updated•20 years ago
|
Attachment #215496 -
Flags: approval-branch-1.8.1?(mconnor) → approval-branch-1.8.1+
| Assignee | ||
Comment 38•20 years ago
|
||
Attachment #215496 -
Attachment is obsolete: true
Attachment #217349 -
Flags: first-review+
Attachment #217349 -
Flags: approval-branch-1.8.1+
| Assignee | ||
Updated•20 years ago
|
Keywords: fixed1.8.1
| Assignee | ||
Updated•20 years ago
|
Target Milestone: mozilla1.9alpha1 → mozilla1.8.1
Comment 39•20 years ago
|
||
verified.
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20060406
Firefox/2.0a1
Comment 40•19 years ago
|
||
*** Bug 350426 has been marked as a duplicate of this bug. ***
Updated•19 years ago
|
Flags: in-testsuite?
You need to log in
before you can comment on or make changes to this bug.
Description
•