Bug 187772 mouse wheel scrolling does not dismiss form auto complete history, results in floating autocomplete dropdown r=mconnor